# aurora

./: .mypy.ini  Pipfile  TOKENS.py  borealis.py  bot.py  meta.py  pyproject.toml  setup.py
action/: __init__.py  context.py  event.py
action/filter/: __init__.py
aurcore/: __init__.py  event.py
aurcore/aurlux/: __init__.py  client.py
aurcore/event/: __init__.py
aurcore/task/: action.py
aurcore/utils/: zutils.py
aurora/: __init__.py
aurora/aurlux/: __init__.py  client.py  command.py
aurora/enum/: __init__.py
aurora/event/: __init__.py  event.py
aurora/task/: __init__.py  actionable.py
microservices/: shortlinker.py
remind/: cog.py  reminder.py
tenebris/: __init__.py
tests/: a.py  conftest.py  test_basic_router.py  test_complex_router.py  test_detatches.py  test_wait_for.py
