[tool.poetry]
name = "aurora"
version = "0.1.2"
description = ""
authors = ["Zenith <z@zenith.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.5.0"
"discord.py-stubs" = "^1.5.0"
aurflux = "^3.2.89"
aurcore = "^1.1.34"
dateparser = "*"
asyncpg = "^0.21.0"

[tool.poetry.dev-dependencies]
mypy = "^0.790"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
